<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. All Rights Reserved.
  -->

<resources>

    <string name="app_name">Database Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="database">DATABASE</string>
    <string name="action_overflow">Overflow</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="download">Download Type</string>
    <string name="update">App Updates</string>
    <string name="username">Username</string>
    <string name="notification">Notification</string>
    <string name="display">Display</string>
    <string name="show_all">Show All</string>

    <string-array name="listArray">
        <item>Headings</item>
        <item>Headings and Details</item>
        <item>All Data</item>
    </string-array>

    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
