<!--
  ~ Copyright (c) 2016. All Rights Reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyIntentService$MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/overflow"
        android:title="@string/action_overflow"
        app:showAsAction="always" >

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_red"
                    android:orderInCategory="1"
                    app:showAsAction="never"
                    android:title="@string/red"/>
                <item
                    android:id="@+id/menu_green"
                    android:orderInCategory="2"
                    app:showAsAction="never"
                    android:title="@string/green"/>
                <item
                    android:id="@+id/menu_yellow"
                    android:orderInCategory="3"
                    app:showAsAction="never"
                    android:title="@string/yellow"/>
                <item
                    android:id="@+id/menu_blue"
                    android:orderInCategory="4"
                    app:showAsAction="never"
                    android:title="@string/blue"/>

            </group>

        </menu>
    </item>

</menu>
